# Email

./: .env.example  Dockerfile  INTEGRATION.md  README.md  SETUP-无需命令行.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirem.md
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py  router.py
app/services/: mailer.py
examples/: emailClient.js
scripts/: test-email.js
src/: app.js  config.js  index.js  mailer.js
src/routes/: contact.js  health.js  send.js
src/templates/: index.js
