[project]
name = "email-service"
version = "0.1.0"
description = "独立邮件服务 - MathStudyPlatform 邮箱验证与密码重置通知"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosmtplib>=3.0.0",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
